Added EntityFramework and Created Database

--- a/HotelListing.API/appsettings.json
+++ b/HotelListing.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDbConnectionString": "Server=.;Database=HotelListingAPIDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
